# yappy

./: .gitignore  CLAUDE-DESKTOP.md  CONTRIBUTING.md  Cargo.toml  IOS_HANDOFF.md  LICENSE  README.md  SHORTCUTS.md  STATUS_iOS.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/yappy-core/: Cargo.toml
crates/yappy-core/src/: chunker.rs  engine.rs  lang_detect.rs  lib.rs  normalize.rs  supertonic.rs  voices.rs
extension/chromium/: manifest.json  popup.html
maestro/: README.md  run-all.sh
maestro/flows/: install-voices.yaml  onboarding.yaml  smoke.yaml
scripts/: asc-helper.mjs  build-mac.sh  fetch-ort-ios.sh  ios-build-and-upload.sh  notarize.sh
yappy-app/: README.md  package-lock.json  package.json
yappy-app/resources/extension/: background.js  options.js  popup.css
yappy-app/src/: app.css  app.html
yappy-app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
yappy-app/src-tauri/capabilities/: default.json  desktop.json
yappy-app/src-tauri/icons/: icon.icns
yappy-app/src-tauri/src/: audiobook.rs  bridge.rs  commands.rs  credits.rs  history.rs  hotkey.rs  lib.rs  main.rs  mobile.rs  model.rs  os_win.rs  playback.rs  settings.rs  state.rs  tray.rs  windows.rs
yappy-app/src-tauri/src/capture/: active_doc.rs  browser.rs  clipboard.rs  doc_loader.rs  mod.rs  ocr.rs  selection.rs
yappy-app/src-tauri/tests/: m4b_smoke.rs
yappy-app/src/lib/: AboutModal.svelte  Confetti.svelte  CreditsModal.svelte  DiagBlock.svelte  HelpOverlay.svelte  HistoryList.svelte  HotkeyPicker.svelte  Onboarding.svelte  SoundWaves.svelte  SourcePill.svelte  YappyMascot.svelte  haptic.ts  ipc.ts  platform.ts  shareIntake.ts
yappy-app/src/routes/: +page.svelte
yappy-app/src/routes/document/: +page.svelte
yappy-app/src/routes/player/: +page.svelte
yappy-app/tests/: defuddle.test.mjs
