[workspace]
members = ["crates/yappy-core", "yappy-app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yappy"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
once_cell = "1"
ndarray = { version = "0.16", features = ["rayon"] }
# ONNX Runtime — baseline features that link cleanly on every platform.
# Heavier EPs (DirectML on Windows, optional CUDA / ROCm / OpenVINO) are
# layered on top via per-target deps + Cargo features in yappy-app's
# Cargo.toml. See CLAUDE-DESKTOP.md for the full HW acceleration matrix.
ort = { version = "=2.0.0-rc.10", features = ["coreml", "xnnpack"] }
rand = "0.8"
rand_distr = "0.4"
hound = "3.5"
unicode-normalization = "0.1"
unicode-segmentation = "1.11"
whatlang = "0.16"
yappy-core = { path = "crates/yappy-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
