[package]
name = "yappy-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
once_cell.workspace = true
ndarray.workspace = true
ort.workspace = true
rand.workspace = true
rand_distr.workspace = true
hound.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
whatlang.workspace = true

[features]
default = []
# Allow building docs/tests without the heavy ONNX models present.
mock-tts = []

[[bin]]
name = "yappy-cli"
path = "src/bin/cli.rs"
