[package]
name = "yappy-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Yappy — local TTS that reads anything on your screen."
authors.workspace = true

[lib]
name = "yappy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
regex = "1"
hound.workspace = true

# Cross-platform OCR via PaddleOCR ONNX
paddle-ocr-rs = "0.6"
image = "0.25"

# Cross-platform document parsing — pure Rust, no external deps.
anytomd = "1.2"
# pdf_oxide: pure-Rust PDF reader, 5× faster than pdf-extract on real-world PDFs,
# 100% pass rate, returns proper Markdown with headings. Replaces pdf-extract.
pdf_oxide = "0.3"
# pdfium-render is loaded LATE: only used for scanned-PDF rasterization → PaddleOCR
# (the dylib lives at resources/pdfium/libpdfium.dylib in the .app bundle).
pdfium-render = { version = "0.8", features = ["thread_safe", "image"] }
epub = "2"
zip = "2"
quick-xml = "0.36"
calamine = "0.26"
encoding_rs = "0.8"

# Local bridge to the browser extension
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
uuid = { version = "1", features = ["v4", "serde"] }

yappy-core = { workspace = true }

# Audio output
cpal = "0.15"
rubato = "0.16"

# Async / channels
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "io-util", "fs"] }
futures = "0.3"
crossbeam-channel = "0.5"

# Download w/ progress
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Useful utilities
dirs = "5"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSURL", "NSData", "NSError"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication"] }
