[package]
name = "yappy-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Yappy — local TTS that reads anything on your screen."
authors.workspace = true

[lib]
name = "yappy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core + plugins available on every platform (macOS, Linux, Windows, iOS).
# `tray-icon` and `macos-private-api` are gated to applicable platforms inside
# Tauri itself, so listing them here is safe for iOS.
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"

# Pure-Rust util + core deps — work on every target.
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
regex = "1"
hound.workspace = true

# Cross-platform OCR via PaddleOCR ONNX. With ORT's CoreML EP registered at
# environment level (see lib.rs), PaddleOCR runs on the Neural Engine on iOS.
paddle-ocr-rs = "0.6"
image = "0.25"

# Document parsing.
anytomd = "1.2"
pdf_oxide = "0.3"
epub = "2"
zip = "2"
quick-xml = "0.36"
calamine = "0.26"
encoding_rs = "0.8"

# Local bridge to the browser extension. tokio-tungstenite compiles fine on
# iOS even though the server is gated to desktop in code (bridge.rs).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
uuid = { version = "1", features = ["v4", "serde"] }

yappy-core = { workspace = true }

# Used here only to register the CoreML execution provider at the ONNX Runtime
# environment level (see lib.rs). yappy-core already depends on ort with the
# `coreml` feature; declaring it here just gives us API access in this crate.
ort = { workspace = true }

# Audio output. cpal supports CoreAudio on macOS AND iOS.
cpal = "0.15"
rubato = "0.16"

# M4B audiobook encoding. fdk-aac vendors its C source and builds via cc+cmake;
# mp4 crate is pure Rust. Both compile on iOS.
fdk-aac = "0.7"
mp4 = "0.14"
byteorder = "1"

# Async / channels
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "io-util", "fs"] }
futures = "0.3"
crossbeam-channel = "0.5"

# Download w/ progress
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Misc.
dirs = "5"
base64 = "0.22"

# ─── macOS-only deps (AppKit / Core Foundation / Core Graphics).
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSURL", "NSData", "NSError"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication"] }

# ─── pdfium-render: bundled for desktop (uses dylib/dll/so loaded at runtime).
# Not yet bundled for iOS — we'd need to provide an iOS XCFramework. For Phase
# 1 the dep is simply excluded from iOS; capture/doc_loader.rs falls back to
# pdf_oxide (pure-Rust born-digital PDFs) + PaddleOCR (scanned).
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
pdfium-render = { version = "0.8", features = ["thread_safe", "image"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"

# ─── Windows-native APIs ─────────────────────────────────────────────────
# `windows` crate features kept tight — each enabled feature adds compile
# time + binary size, so we only pull what we actually use.
#
#   Media_Playback / Media + Foundation_Collections — SMTC (System Media
#     Transport Controls): lock-screen audio controls + media keys + BT
#     headphone buttons. The Windows equivalent of macOS's
#     MPNowPlayingInfoCenter (which we wired in NowPlaying.swift for iOS).
#   Win32_UI_Shell — ITaskbarList3 for taskbar progress + ICustomDestinationList
#     for Jump Lists.
#   Win32_System_Com — COM init for the Shell interfaces above.
#   Win32_Foundation / Win32_UI_WindowsAndMessaging — HWND + interop boilerplate.
#   System_WinRT_Media — ISystemMediaTransportControlsInterop (gets SMTC
#     by HWND instead of needing a MediaPlayer instance).
[target.'cfg(target_os = "windows")'.dependencies]
ort = { workspace = true, features = ["directml"] }
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Media",
    "Media_Playback",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
# Single-instance: second launch from a file association or quick action
# focuses the existing window instead of spawning a duplicate process.
tauri-plugin-single-instance = "2"
# Auto-update channel — checks GitHub Releases for newer signed installers
# and offers to install in-place. Works on Linux + Windows.
tauri-plugin-updater = "2"

# ─── Optional GPU EPs, opt-in via Cargo features ─────────────────────────
# Power-user builds for NVIDIA / AMD / Intel-deep-tooling. These pull in
# external system SDKs (CUDA Toolkit / cuDNN, ROCm, OpenVINO Toolkit) which
# must be installed BEFORE building. See CLAUDE-DESKTOP.md for the env
# variables each needs (e.g. CUDA_PATH on Windows, ROCM_HOME on Linux).
[features]
default = []
cuda     = ["ort/cuda"]      # NVIDIA GPUs on Linux + Windows (huge speedup, needs CUDA Toolkit at build)
tensorrt = ["ort/tensorrt"]  # NVIDIA + TensorRT (Linux mainly)
rocm     = ["ort/rocm"]      # AMD GPUs on Linux (requires ROCm install)
openvino = ["ort/openvino"]  # Intel CPUs/GPUs (Linux + Windows + macOS Intel)
